<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context=".inscrit">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/android_picture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:contentDescription="@string/btnCon"
            android:src="@drawable/hotel" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:orientation="vertical">


        <EditText
            android:id="@+id/nom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/nom"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/prenom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/prenom"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/emaile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/login"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/pwdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:hint="@string/pwd"
            android:inputType="textPassword"
            tools:layout_editor_absoluteX="84dp"
            tools:layout_editor_absoluteY="247dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:onClick="inscrits"
                android:text="@string/inscrit" />

            <Button
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:onClick="Annuler"
                android:text="@string/anneler" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>