<?xml version="1.0" encoding="utf-8"?>
<ScrollView

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".gerer"
    tools:showIn="@layout/app_bar_gerer">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:orientation="vertical">


        <EditText
            android:id="@+id/numchabre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/numchambre" />


        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/lib"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/libre" />

            <RadioButton
                android:id="@+id/occup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/occuper"

                />
        </RadioGroup>

        <EditText
            android:id="@+id/nomcl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/Nomclient" />

        <EditText
            android:id="@+id/prenomcl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/Prenomclient" />


        <EditText
            android:id="@+id/cin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="CIN" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Datedebut"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            android:textStyle="bold"

            />

        <DatePicker
            android:id="@+id/deb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible">


        </DatePicker>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/DateFin"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            android:textStyle="bold" />

        <DatePicker
            android:id="@+id/fin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">


        </DatePicker>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="reserver"
                android:text="Reserver" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="Annuler"
                android:text="Annuler" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>