<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="55dp"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:padding="@dimen/normal_padding">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/salutation"
        android:textSize="50dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/login"
        android:textColor="@color/colorAccent"
        android:textSize="20dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/email_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/login"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/normal_padding"
        android:text="@string/pwd"
        android:textColor="@color/colorAccent"
        android:textSize="20dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/password_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/pwd"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20dp" />

    <ImageView
        android:id="@+id/android_picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:contentDescription="@string/btnCon"
        android:src="@drawable/hotel" />
</LinearLayout>