<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/numchambre"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="106dp" />


        <EditText
            android:id="@+id/numch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:ems="10"
            android:inputType="textPersonName"
            tools:layout_editor_absoluteX="131dp"
            tools:layout_editor_absoluteY="96dp" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nbrlit"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="193dp" />


        <EditText
            android:id="@+id/nbrch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:ems="10"
            android:inputType="textPersonName"
            tools:layout_editor_absoluteX="131dp"
            tools:layout_editor_absoluteY="176dp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prix"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="275dp" />

        <EditText
            android:id="@+id/prix"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:ems="10"
            android:inputType="textPersonName"
            tools:layout_editor_absoluteX="131dp"
            tools:layout_editor_absoluteY="258dp" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="ajouterCh"
            android:text="@string/ajouterchambre"
            tools:layout_editor_absoluteX="42dp"
            tools:layout_editor_absoluteY="353dp" />

        <Button

            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="anul"
            android:text="@string/anneler"
            tools:layout_editor_absoluteX="174dp"
            tools:layout_editor_absoluteY="353dp" />


    </LinearLayout>
</LinearLayout>